# local-monitor

./: CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-25-local-monitor-plan.md
docs/superpowers/specs/: 2026-03-25-hud-redesign.md  2026-03-25-local-monitor-design.md
src/: app.rs  db.rs  main.rs  metrics.rs
src/collectors/: cpu.rs  disk.rs  gpu.rs  mod.rs  network.rs  ram.rs  system.rs
src/ui/: mod.rs  theme.rs
src/ui/graphs/: cpu_ram.rs  disk.rs  gpu_vram.rs  mod.rs  network.rs
src/ui/hud/: cpu.rs  disk.rs  gpu.rs  mod.rs  network.rs  ram.rs  system.rs
